--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
         <i class="far fa-user-circle"></i>
     </div>
     <h1 class="page-title">Login</h1>
-    <form id="login-form" class="form" action="{{ url_for('login') }}" method="POST">
+    <form id="login-form" class="form form--narrow" action="{{ url_for('login') }}" method="POST">
         <div class="row">
             <div class="col-12">
                 <label for="login-username" class="form__label">Username</label>
