--- a/templates/cocktail-edit.html
+++ b/templates/cocktail-edit.html
@@ -232,7 +232,7 @@
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
-                    <a href="{{ url_for('profile') }}" class="cta cta--delete cta---lesser cta--submit">Cancel</a>
+                    <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cta cta--delete cta---lesser cta--submit">Cancel</a>
                     
                     <!--Save as Draft-->
                     <input type="submit" class="cta cta---greater cta--submit" value="Save For Later">
