--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -7,12 +7,15 @@
         <!--Bookmark-->
         <form id="bookmark" class="cocktail-header__bookmark-form" action="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" method="POST">
             <input type="hidden" id="random" name="random" value="{{ range(1, 10000000) | random }}">
-            <button id="bookmark-submit" class="cocktail-header__bookmark-btn">
-                {% if bookmark == "false" %}
-                    <i class="cocktail-header__function cocktail-header__function--bookmark far fa-bookmark inline-block"></i>
-                {% else %}
-                    <i class="cocktail-header__function cocktail-header__function--bookmark fas fa-bookmark inline-block"></i>
-                {% endif %}
+            <input type="hidden" name="cocktail-id" value="{{ cocktail._id }}">
+            <button id="form-submit" class="cocktail-header__bookmark-btn" name="form-submit" value="bookmark">
+                <p class="cocktail-header__function cocktail-header__function--bookmark">
+                    {% if bookmark == "false" %}
+                        <i class="far fa-bookmark inline-block"></i> Save
+                    {% else %}
+                        <i class="fas fa-bookmark inline-block"></i> Saved
+                    {% endif %}
+                </p>
             </button>
         </form>
         {% if session.id == cocktail.author_id %}
@@ -30,7 +33,9 @@
         </div>
         <p class="cocktail-header__info"><strong>Date Added:</strong> {{ cocktail.date_added.strftime('%d/%m/%y') }}</p>
         <p class="cocktail-header__info"><a href="{{ url_for('profile', profile_name=cocktail.author, profile_id=cocktail.author_id) }}">by <span class="cocktail-header__author">{{ cocktail.author }}</span></a></p>
+    {% if session.id != cocktail.author_id %}
         <button class="cta cta--cocktail">Rate This Cocktail</button>
+    {% endif %}
     </section>
 
     <!--Cocktail Info-->
