--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -139,7 +139,7 @@
 
             <!--Cocktail Image-->
             <div class="cocktail__img-contianer col-4">
-                <img class="cocktail__img" src="/static/images/bramble.jpg">
+                <img class="cocktail__img" src="{{ cocktail.image }}" alt="cocktial image">
             </div>
         </div>
 
