--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -21,7 +21,7 @@
         {% endif %}
 
     </form>
-    <img class="rec-card__img card-img-top" src="{{ url_for('static', filename='images/pornstar-martini.jpg') }}" alt="cocktail image">
+    <img class="rec-card__img card-img-top" src="{{ cocktail.image }}" alt="cocktail image">
     <div class="rec-card__info card-body">
         <h5 class="rec-card__title">{{ cocktail.cocktail_name }}</h5>
         <div class="row">
