cocktail edit: Fix cocktail image not being displayed

--- a/templates/cocktail-edit.html
+++ b/templates/cocktail-edit.html
@@ -173,7 +173,7 @@
                     <label for="cocktial-img" class="form__label">Copy and Paster Cocktail Image URL</label>
                     <p>Image will preview if URL valid after you click away.</p>
                     <p>Commonly the URL will end with the file name and .jpg, .jpeg or .png</p>
-                    <input type="url" id="cocktail-img-url" name="cocktail-img-url" class="form__input" placeholder="Enter URL for cocktail image eg. https//www.example.com/image" required>
+                    <input type="url" id="cocktail-img-url" name="cocktail-img-url" class="form__input" placeholder="Enter URL for cocktail image eg. https//www.example.com/image" value="{{ cocktail.image }}" required>
                 </div>
             </div>
 
