--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -23,7 +23,7 @@
     </form>
     <img class="rec-card__img card-img-top" src="{{ cocktail.image }}" alt="cocktail image">
     <div class="rec-card__info card-body">
-        <h5 class="rec-card__title">{{ cocktail.cocktail_name }}</h5>
+        <h5 class="rec-card__title">{{ cocktail.cocktail_name.title() }}</h5>
         <div class="row">
             <div class="rec-card__star-rating col-6">
                 <p>
