--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,9 @@ body {
 
 main {
     padding: 100px 40px;
+    margin: 0 auto;
     min-height: 100%;
+    max-width: 2500px;
 
 }
 
@@ -333,8 +335,8 @@ button:focus {
 }
 
 .hero__image {
-    background: url(../images/bramble.jpg) no-repeat center center;
-    background-position: 0% 75%;
+    background: url(https://drive.google.com/uc?export=view&id=1xxYCbYNJ5bQmalWEqNgZyl8zjxnV5Id9) no-repeat center center;
+    background-position: 60% 100%;
     position: relative;
     height: 80vh;
     width: 100%;
@@ -347,7 +349,7 @@ button:focus {
     left: 5%;
     top: 15%;
     color: white;
-    font-size: 9rem;
+    font-size: 8rem;
 }
 
 .hero__inner {
@@ -642,7 +644,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 }
 
 .rec-card__img {
-   height: 245px;
+   height: 300px;
    width: 100%;
    border-top-left-radius: 7.5px;
    border-top-right-radius: 7.5px;
@@ -830,11 +832,12 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 
 .cocktail__img-contianer {
     text-align: center;
+    min-height: 800px;
 }
 
 .cocktail__img {
-    width: 900px;
-    height: 900px;
+    width: 100%;
+    height: 80%;
 }
 
 .cocktail__info {
