--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -23,6 +23,9 @@
             <a href="{{ url_for('cocktail_create', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cocktail-header__function cocktail-header__function--edit">
                 <i class="fas fa-pencil-alt"></i> Edit
             </a>
+            <a href="{{ url_for('delete_cocktail', cocktail_id=cocktail._id) }}" class="cocktail-header__function cocktail-header__function--delete">
+                <i class="fas fa-minus-circle"></i> Delete
+            </a>
         {% endif %}
 
         <!--Cocktail Rating-->
