Fix issue with cocktail creation form alcohol type none error
I believe this to be due to the lower() function down on the value
after the form is submit it.

--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -44,7 +44,7 @@
                             <select name="alcohol" id="alcohol" class="form-cocktail__input" aria-label="dropdown menu to select alcohol type" required>
                                 <option value="" disabled selected hidden>Alcohol Type</option>
                                 {% for alcohol in alcohol_categories %}
-                                    <option value="{{ alcohol.alcohol_name }}">{{ alcohol.alcohol_name.title() }}</option>
+                                    <option value="{{ alcohol.alcohol_name.lower() }}">{{ alcohol.alcohol_name }}</option>
                                 {% endfor %}
                             </select>
                         </li>
