--- a/templates/cocktail-edit.html
+++ b/templates/cocktail-edit.html
@@ -179,7 +179,7 @@
 
             <!--Cocktail Instructions-->
             <div class="cocktail__row row">
-                <div class="cocktail__instructions col-8">
+                <div class="cocktail__instructions col-12">
                     <h2 class="cocktail__item-title">Instructions</h2>
                     <ol id="cocktail-instructions" class="cocktail__info">
                         {% for i in range(0, cocktail.instructions | length) %}
@@ -202,28 +202,6 @@
                         <i class="fas fa-plus-circle"></i> Add Instruction
                     </button>
                 </div>
-
-                <!--Cocktail Tips-->
-                <div class="cocktail__tips col-4">
-                    <h2 class="cocktail__item-title">Tips</h2>
-                    <ul id="cocktail-tips" class="cocktail__info">
-                        <li class="form-tip">
-                            <textarea id="tip-1" name="tip-1" 
-                                class="form-cocktail__input form-cocktail__text-area form-cocktail__text-area--tip" rows="3" placeholder="Type your tip here" 
-                                maxlength="200" aria-label="enter tip" required></textarea>
-                            
-                            <!--Remove Tip Button-->
-                            <button class="remove-tip cocktail-btn cocktail-btn--remove float-right" type="button">
-                                <i class="fas fa-minus-circle"></i> Remove
-                            </button>
-                        </li>
-                    </ul>
-
-                    <!--Add Tip Button-->
-                    <button id="add-tip" class="cocktail-btn cocktail-btn--add clear-both" type="button">
-                        <i class="fas fa-plus-circle"></i> Add Tip
-                    </button>
-                </div>
             </div>
 
             <!--Hidden Inputs Used for backend functions-->
@@ -236,11 +214,8 @@
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
                     <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cta cta--delete cta---lesser cta--submit">Cancel</a>
-                    
-                    <!--Save as Draft-->
-                    <input type="submit" class="cta cta---greater cta--submit" value="Save For Later">
 
-                    <!--Publish for all users to see-->
+                    <!--Publish-->
                     <input type="submit" class="cta cta--create cta---greater cta--submit" value="Publish">
                 </div>
             </div>
