--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -10,13 +10,19 @@
     {% endif %}
         <input type="hidden" name="random" value="{{ range(1, 10000000) | random }}">
         <input type="hidden" name="cocktail-id" value="{{ cocktail._id }}">
+
+        <!--Bookmark Icon Changer-->
         {% if cocktail._id | string in user_bookmarks %}
             <button class="rec-card__bookmark" name="form-submit" value="bookmark">
                 <i class="cocktail-header__bookmark fas fa-bookmark inline-block"></i>
             </button>
         {% else %}
             <button class="rec-card__bookmark" name="form-submit" value="bookmark">
-                <i class="cocktail-header__bookmark far fa-bookmark inline-block"></i>
+                {% if session.user %}
+                    <i class="far fa-bookmark inline-block"></i>
+                {% else %}
+                    <i class="faded far fa-bookmark inline-block"></i>
+                {% endif %}
             </button>
         {% endif %}
 
@@ -30,7 +36,7 @@
         <h5 class="rec-card__title">{{ cocktail.cocktail_name.title() }}</h5>
         <div class="row">
             <!--Star Rating-->
-            <div class="rec-card__star-rating col-6">
+            <div class="rec-card__star-rating col-7">
                 <p>
                     {% if cocktail.rating == 0 %}
                         No Rating
@@ -39,13 +45,13 @@
                             <i class="fas fa-star"></i>
                         {% endfor %}
                     {% endif %}
-                    ({{ cocktail.no_rating }})
+                    <span class="rec-card__no_rating"> ({{cocktail.no_rating }})</span>
                 </p>
             </div>
 
             <!--Make It-->
-            <div class="rec-card__col col-6">
-                <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="rec-card__cta cta">Make It</a>
+            <div class="rec-card__col col-5">
+                <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="rec-card__cta cta cta--create">Make It</a>
             </div>
 
             {% if not profile %}
