--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,7 +42,7 @@
         </div>
     </section>
 {% endif %} 
-{{ edit }}
+
 <!--User Cocktails-->
 <section class="rec-carsousel section-spacing">
     <div class="rec-carsousel__header">
@@ -80,6 +80,8 @@
             <!--Navigation buttons-->
             <div class="rec-carsousel__btn-container">
                 <div class="rec-carsousel__swiper-button swiper-button-prev"></div>
+                <!--Pagination-->
+                <div class="swiper-pagination inline-block"></div>
                 <div class="rec-carsousel__swiper-button swiper-button-next"></div>
             </div>
         </div>
@@ -126,6 +128,8 @@
             <!--Navigation buttons-->
             <div class="rec-carsousel__btn-container">
                 <div class="rec-carsousel__swiper-button swiper-button-prev"></div>
+                <!--Pagination-->
+                <div class="swiper-pagination inline-block"></div>
                 <div class="rec-carsousel__swiper-button swiper-button-next"></div>
             </div>
         </div>
