--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -70,9 +70,9 @@
             <!--Function Buttons-->
             <div class="rec-card__container">
                 <a href="{{ url_for('cocktail_create', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cta cta--edit cta--profile cta--link inline"><i class="fas fa-pencil-alt"></i> Edit</a>
-                <button class="cta cta--delete cta--fw cta--profile" type="button">
-                    <i class="fas fa-minus-circle inline"></i> Delete
-                </button>
+                <a href="{{ url_for('delete_cocktail', cocktail_id=cocktail._id) }}" class="cta cta--delete cta--profile cta--link inline">
+                    <i class="fas fa-minus-circle"></i> Delete
+                </a>
             </div>
         {% endif %}
     </div>
